# analytics-engineer-challenge

./: .env  .gitignore  Makefile  README.md  pyproject.toml  run_pipeline.py
data/exports/: export_last_month_delivery_loads_2026-03-24.csv
dbt_project/: .gitignore  .user.yml  dbt_project.yml  dev.duckdb  profiles.yml
dbt_project/macros/: custom_schema.sql
dbt_project/models/: sources.yml
dbt_project/models/marts/: dim_carrier.sql  dim_city.sql  dim_location.sql  dim_shipper.sql  fact_load.sql  schema.yml
dbt_project/models/staging/: stg_loadsmart_database.sql
dbt_project/seeds/: loadsmart_database.csv
notebooks/: Untitled.ipynb  cleaning_raw_data.ipynb  database_parquet_export.py  export_last_month_delivery_loads.ipynb  export_last_month_delivery_loads.py  loadsmart_challenge.ipynb  loadsmart_challenge.nbconvert.ipynb  loadsmart_challenge.py  send_csv_email.ipynb  send_csv_email.py  send_csv_sftp.ipynb  send_csv_sftp.py
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  loadsmart_challenge-checkpoint copy.ipynb  loadsmart_challenge-checkpoint.ipynb
power_bi/: loads_dashboard.pbit  loads_dashboard.pbix
