[project]
name = "analytics-engineer-challenge"
version = "0.1.0"
description = "Analytics engineering challenge using Python and Poetry"
authors = [
    {name = "Gabriel Fernandes",email = "gabriel.fernandes@alice.com.br"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "duckdb (>=1.5.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dbt-duckdb (>=1.10.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
